Added API for getting data from remote table
